Update notebook for nvidia.
Signed-off-by: Thomas Alexander <talexander@nvidia.com>

--- a/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
@@ -27,26 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import sys, os\n",
-        "_root = os.path.join(os.path.expanduser(\"~/Devel/cudaq-pstbe/vendor/cuda-quantum\"), \"build\")\n",
-        "sys.path.insert(0, os.path.join(_root, \"python\"))\n",
-        "_build_lib = os.path.join(_root, \"lib\")\n",
-        "os.environ[\"LD_LIBRARY_PATH\"] = _build_lib + \":\" + os.environ.get(\"LD_LIBRARY_PATH\", \"\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "import cudaq\n",
         "\n",
-        "cudaq.set_target(\"qpp-cpu\")\n",
+        "cudaq.set_target(\"nvidia\")\n",
         "cudaq.set_random_seed(42)"
       ]
     },
@@ -61,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -91,19 +78,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Inline apply_noise result:\n",
-            "{ 00:4873 01:74 10:74 11:4979 }\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "@cudaq.kernel\n",
         "def bell_inline_noise():\n",
@@ -147,27 +124,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Comparison with same shots=10000, max_trajectories=16[2026-02-27 13:01:50.434] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "\n",
-            "PTSBE (ordered + low-weight bias)    shots= 10000  counts={ 00:5045 01:6 10:4 11:4945 }\n",
-            "\n",
-            "PTSBE (ordered + proportional)       shots= 10000  counts={ 00:4877 01:49 10:55 11:5019 }\n",
-            "\n",
-            "Standard noisy sample                shots= 10000  counts={ 00:5041 11:4959 }\n",
-            "\n",
-            "[2026-02-27 13:01:50.434] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:50.434] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:50.434] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "shots = 10000\n",
         "max_traj = 16\n",
@@ -228,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -252,45 +211,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[2026-02-27 13:01:53.824] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "Circuit: 12-qubit GHZ (12 noise sites)\n",
-            "Shots: 10,000,000, PTSBE max_trajectories: 256\n",
-            "  PTSBE:              3.348s\n",
-            "  Standard noisy:     3.206s\n",
-            "  Speedup:            1.0x\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.825] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n",
-            "[2026-02-27 13:01:53.826] [warning] [CircuitSimulator.h:784] Applying noise is not supported on qpp simulator.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import time\n",
         "\n",
@@ -337,63 +260,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Trajectories: 147, Total shots: 1,000,000\n",
-            "\n",
-            "Top 5 trajectories (highest probability):\n",
-            "  #1: p_theory=0.886385, p_empirical=0.888297, shots=888,297, errors=0, cumulative shots=88.8%\n",
-            "  #2: p_theory=0.002984, p_empirical=0.002378, shots=2,378, errors=1, cumulative shots=89.1%\n",
-            "  #3: p_theory=0.002984, p_empirical=0.002333, shots=2,333, errors=1, cumulative shots=89.3%\n",
-            "  #4: p_theory=0.002984, p_empirical=0.004269, shots=4,269, errors=1, cumulative shots=89.7%\n",
-            "  #5: p_theory=0.000597, p_empirical=0.000434, shots=434, errors=1, cumulative shots=89.8%\n",
-            "\n",
-            "Lowest-probability trajectory:\n",
-            "  prob=2.71e-10, shots=359, errors=3\n",
-            "\n",
-            "Highest-probability trajectory (id=0):\n",
-            "  prob=0.886385, shots=888,297\n",
-            "  Kraus selections:\n",
-            "    site 1 [depolarization_channel on q[0]]: K0 (no-error)\n",
-            "    site 3 [depolarization2 on q[1, 0]]: K0 (no-error)\n",
-            "    site 5 [depolarization2 on q[2, 1]]: K0 (no-error)\n",
-            "    site 7 [depolarization2 on q[3, 2]]: K0 (no-error)\n",
-            "    site 9 [depolarization2 on q[4, 3]]: K0 (no-error)\n",
-            "    site 11 [depolarization2 on q[5, 4]]: K0 (no-error)\n",
-            "    site 13 [depolarization2 on q[6, 5]]: K0 (no-error)\n",
-            "    site 15 [depolarization2 on q[7, 6]]: K0 (no-error)\n",
-            "    site 17 [depolarization2 on q[8, 7]]: K0 (no-error)\n",
-            "    site 19 [depolarization2 on q[9, 8]]: K0 (no-error)\n",
-            "    site 21 [depolarization2 on q[10, 9]]: K0 (no-error)\n",
-            "    site 23 [depolarization2 on q[11, 10]]: K0 (no-error)\n",
-            "\n",
-            "Lowest-probability trajectory (id=108):\n",
-            "  prob=2.71e-10, shots=359\n",
-            "  Kraus selections:\n",
-            "    site 1 [depolarization_channel on q[0]]: K0 (no-error)\n",
-            "    site 3 [depolarization2 on q[1, 0]]: K13 (error)\n",
-            "    site 5 [depolarization2 on q[2, 1]]: K12 (error)\n",
-            "    site 7 [depolarization2 on q[3, 2]]: K0 (no-error)\n",
-            "    site 9 [depolarization2 on q[4, 3]]: K0 (no-error)\n",
-            "    site 11 [depolarization2 on q[5, 4]]: K7 (error)\n",
-            "    site 13 [depolarization2 on q[6, 5]]: K0 (no-error)\n",
-            "    site 15 [depolarization2 on q[7, 6]]: K0 (no-error)\n",
-            "    site 17 [depolarization2 on q[8, 7]]: K0 (no-error)\n",
-            "    site 19 [depolarization2 on q[9, 8]]: K0 (no-error)\n",
-            "    site 21 [depolarization2 on q[10, 9]]: K0 (no-error)\n",
-            "    site 23 [depolarization2 on q[11, 10]]: K0 (no-error)\n",
-            "\n",
-            "Trajectories grouped by error count:\n",
-            "  0 errors: 1 trajectories, 888,297 shots (88.8%)\n",
-            "  1 errors: 126 trajectories, 103,948 shots (10.4%)\n",
-            "  2 errors: 19 trajectories, 7,396 shots (0.7%)\n",
-            "  3 errors: 1 trajectories, 359 shots (0.0%)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from collections import Counter\n",
         "\n",
