--- a/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
@@ -27,13 +27,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys, os\n",
+        "_root = os.path.join(os.path.expanduser(\"~/Devel/cudaq-pstbe/vendor/cuda-quantum\"), \"build\")\n",
+        "sys.path.insert(0, os.path.join(_root, \"python\"))\n",
+        "_build_lib = os.path.join(_root, \"lib\")\n",
+        "os.environ[\"LD_LIBRARY_PATH\"] = _build_lib + \":\" + os.environ.get(\"LD_LIBRARY_PATH\", \"\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
         "import cudaq\n",
         "\n",
-        "cudaq.set_target(\"nvidia\")\n",
+        "cudaq.set_target(\"qpp-cpu\")\n",
         "cudaq.set_random_seed(42)"
       ]
     },
@@ -48,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -78,9 +91,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Inline apply_noise result:\n",
+            "{ 00:4873 01:74 10:74 11:4979 }\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "@cudaq.kernel\n",
         "def bell_inline_noise():\n",
@@ -124,9 +147,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Comparison with same shots=10000, max_trajectories=16\n",
+            "PTSBE (ordered + low-weight bias)    shots= 10000  counts={ 00:5045 01:6 10:4 11:4945 }\n",
+            "\n",
+            "PTSBE (ordered + proportional)       shots= 10000  counts={ 00:4877 01:49 10:55 11:5019 }\n",
+            "\n",
+            "Density-matrix noisy sample          shots= 10000  counts={ 00:4943 01:83 10:98 11:4876 }\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "shots = 10000\n",
         "max_traj = 16\n",
@@ -162,32 +199,32 @@
         "    max_trajectories=max_traj,\n",
         ")\n",
         "\n",
+        "cudaq.set_target(\"density-matrix-cpu\")\n",
         "result_standard = cudaq.sample(\n",
         "    bell_with_noise,\n",
         "    noise_model=noise,\n",
         "    shots_count=shots,\n",
         ")\n",
+        "cudaq.set_target(\"qpp-cpu\")\n",
         "\n",
         "print(f\"Comparison with same shots={shots}, max_trajectories={max_traj}\")\n",
         "print_result(\"PTSBE (ordered + low-weight bias)\", result_biased)\n",
         "print_result(\"PTSBE (ordered + proportional)\", result_unbiased)\n",
-        "print_result(\"Standard noisy sample\", result_standard)"
+        "print_result(\"Density-matrix noisy sample\", result_standard)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Timing: PTSBE vs standard noisy sampling\n",
+        "#### Larger circuit for execution data\n",
         "\n",
-        "PTSBE batches many shots per unique trajectory, so the number of circuit simulations scales with the number of *unique trajectories* rather than the number of shots. Standard noisy sampling on the statevector simulator runs one trajectory per shot, requiring a full statevector simulation for each.\n",
-        "\n",
-        "To show the difference we use a larger circuit: a 12-qubit GHZ state with depolarization on every gate. This gives 12 noise sites with a correspondingly huge trajectory space. PTSBE caps trajectories with `max_trajectories` and batches 10M shots across just those trajectories."
+        "To demonstrate PTSBE's execution data on a larger circuit, we define a 12-qubit GHZ state with depolarization on every gate. This creates 12 noise sites with a large trajectory space."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -210,42 +247,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import time\n",
-        "\n",
-        "timing_shots = 10_000_000\n",
-        "max_traj = 256\n",
-        "\n",
-        "# PTSBE (batches shots across unique trajectories)\n",
-        "cudaq.set_random_seed(42)\n",
-        "t0 = time.perf_counter()\n",
-        "result_ptsbe = cudaq.ptsbe.sample(\n",
-        "    ghz,\n",
-        "    n_qubits,\n",
-        "    noise_model=ghz_noise,\n",
-        "    shots_count=timing_shots,\n",
-        "    max_trajectories=max_traj,\n",
-        ")\n",
-        "t_ptsbe = time.perf_counter() - t0\n",
-        "\n",
-        "# Standard noisy sampling (one trajectory per shot)\n",
-        "cudaq.set_random_seed(42)\n",
-        "t0 = time.perf_counter()\n",
-        "result_std = cudaq.sample(ghz, n_qubits, noise_model=ghz_noise, shots_count=timing_shots)\n",
-        "t_std = time.perf_counter() - t0\n",
-        "\n",
-        "print(f\"Circuit: {n_qubits}-qubit GHZ ({n_qubits} noise sites)\")\n",
-        "print(f\"Shots: {timing_shots:,}, PTSBE max_trajectories: {max_traj}\")\n",
-        "print(f\"  PTSBE:              {t_ptsbe:.3f}s\")\n",
-        "print(f\"  Standard noisy:     {t_std:.3f}s\")\n",
-        "print(f\"  Speedup:            {t_std / t_ptsbe:.1f}x\")"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -258,13 +259,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Trajectories: 147, Total shots: 1,000,000\n",
+            "\n",
+            "Top 5 trajectories (highest probability):\n",
+            "  #1: p_theory=0.886385, p_empirical=0.888297, shots=888,297, errors=0, cumulative shots=88.8%\n",
+            "  #2: p_theory=0.002984, p_empirical=0.002378, shots=2,378, errors=1, cumulative shots=89.1%\n",
+            "  #3: p_theory=0.002984, p_empirical=0.002333, shots=2,333, errors=1, cumulative shots=89.3%\n",
+            "  #4: p_theory=0.002984, p_empirical=0.004269, shots=4,269, errors=1, cumulative shots=89.7%\n",
+            "  #5: p_theory=0.000597, p_empirical=0.000434, shots=434, errors=1, cumulative shots=89.8%\n",
+            "\n",
+            "Lowest-probability trajectory:\n",
+            "  prob=2.71e-10, shots=359, errors=3\n",
+            "\n",
+            "Highest-probability trajectory (id=0):\n",
+            "  prob=0.886385, shots=888,297\n",
+            "  Kraus selections:\n",
+            "    site 1 [depolarization_channel on q[0]]: K0 (no-error)\n",
+            "    site 3 [depolarization2 on q[1, 0]]: K0 (no-error)\n",
+            "    site 5 [depolarization2 on q[2, 1]]: K0 (no-error)\n",
+            "    site 7 [depolarization2 on q[3, 2]]: K0 (no-error)\n",
+            "    site 9 [depolarization2 on q[4, 3]]: K0 (no-error)\n",
+            "    site 11 [depolarization2 on q[5, 4]]: K0 (no-error)\n",
+            "    site 13 [depolarization2 on q[6, 5]]: K0 (no-error)\n",
+            "    site 15 [depolarization2 on q[7, 6]]: K0 (no-error)\n",
+            "    site 17 [depolarization2 on q[8, 7]]: K0 (no-error)\n",
+            "    site 19 [depolarization2 on q[9, 8]]: K0 (no-error)\n",
+            "    site 21 [depolarization2 on q[10, 9]]: K0 (no-error)\n",
+            "    site 23 [depolarization2 on q[11, 10]]: K0 (no-error)\n",
+            "\n",
+            "Lowest-probability trajectory (id=108):\n",
+            "  prob=2.71e-10, shots=359\n",
+            "  Kraus selections:\n",
+            "    site 1 [depolarization_channel on q[0]]: K0 (no-error)\n",
+            "    site 3 [depolarization2 on q[1, 0]]: K13 (error)\n",
+            "    site 5 [depolarization2 on q[2, 1]]: K12 (error)\n",
+            "    site 7 [depolarization2 on q[3, 2]]: K0 (no-error)\n",
+            "    site 9 [depolarization2 on q[4, 3]]: K0 (no-error)\n",
+            "    site 11 [depolarization2 on q[5, 4]]: K7 (error)\n",
+            "    site 13 [depolarization2 on q[6, 5]]: K0 (no-error)\n",
+            "    site 15 [depolarization2 on q[7, 6]]: K0 (no-error)\n",
+            "    site 17 [depolarization2 on q[8, 7]]: K0 (no-error)\n",
+            "    site 19 [depolarization2 on q[9, 8]]: K0 (no-error)\n",
+            "    site 21 [depolarization2 on q[10, 9]]: K0 (no-error)\n",
+            "    site 23 [depolarization2 on q[11, 10]]: K0 (no-error)\n",
+            "\n",
+            "Trajectories grouped by error count:\n",
+            "  0 errors: 1 trajectories, 888,297 shots (88.8%)\n",
+            "  1 errors: 126 trajectories, 103,948 shots (10.4%)\n",
+            "  2 errors: 19 trajectories, 7,396 shots (0.7%)\n",
+            "  3 errors: 1 trajectories, 359 shots (0.0%)\n"
+          ]
+        }
+      ],
       "source": [
         "from collections import Counter\n",
         "\n",
         "exec_shots = 1_000_000\n",
+        "max_traj = 256\n",
         "result_with_data = cudaq.ptsbe.sample(\n",
         "    ghz,\n",
         "    n_qubits,\n",
@@ -331,13 +389,6 @@
         "    print(f\"  {n_err} errors: {n_traj} trajectories, \"\n",
         "          f\"{total:,} shots ({100 * total / exec_shots:.1f}%)\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
